# client_side_analytics

./: .gitignore  index.css  index.html  index.js  test.html
static/: index.css  index.js  pico.min.css
webasm_module/: Cargo.toml
webasm_module/pkg/: package.json  webasm_module.d.ts  webasm_module.js  webasm_module_bg.wasm  webasm_module_bg.wasm.d.ts
webasm_module/src/: data_model.rs  lib.rs  query_builder.rs  statics.rs
