[package]
name = "webasm_module"
version = "0.1.0"
edition = "2021"
authors = ["Dilovan Celik <dilovan.celik@gmail.com>"]
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.72"
features = ["console"]
